--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cafe_hub?serverTimeZone=UTC
-    username: root
-    password:
-
-  tomcat:
-    test-on-borrow: true
-    validation-query: SELECT 1
-    connection-properties: useUnicode=true;characterEncoding=utf-8
+    driver-class-name: org.postgresql.Driver
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
